force-app/main/default/objects/Offsite_Template__c/Offsite_Template__c.object-meta.xml
<CustomObject>
    <label>Offsite Template</label>
    <nameField>
        <displayFormat>OT-{00000}</displayFormat>
        <label>Offsite Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offsite Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>