force-app/main/default/objects/Offsite_Template__c/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <description>Indicates that the record is archived or ready to be archived</description>
    <formula>$Setup.HL_General__c.Offsite_Archive_Date__c &gt; FYE_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>