force-app/main/default/objects/Offsite_Template__c/fields/Coverage_Team__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Coverage Team</label>
    <referenceTo>Coverage_Team__c</referenceTo>
    <relationshipLabel>Offsite Templates</relationshipLabel>
    <relationshipName>Offsite_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>