force-app/main/default/objects/Offsite_Template__c/fields/Coverage_Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Team_Id__c</fullName>
    <formula>CASESAFEID(  Coverage_Team__r.Id  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Team Id</label>
    <type>Text</type>
</CustomField>