force-app/main/default/objects/Offsite_Template__c/fields/Coverage_Team_Officer__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Team_Officer__c</fullName>
    <label>Coverage Team Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>