force-app/main/default/objects/Offsite_Template__c/fields/Coverage_Team_Officer_ID__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Team_Officer_ID__c</fullName>
    <description>Contact ID of HL Internal Contact</description>
    <label>Coverage Team Officer ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>