force-app/main/default/objects/Offsite_Template__c/fields/Current_Year_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Strategy__c</fullName>
    <label>Current Year Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>