force-app/main/default/objects/Offsite_Template__c/fields/Equity_Investment_Size_To__c.field-meta.xml
<CustomField>
    <fullName>Equity_Investment_Size_To__c</fullName>
    <label>Equity Investment To (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>