force-app/main/default/objects/Offsite_Template__c/fields/Face_To_Face__c.field-meta.xml
<CustomField>
    <fullName>Face_To_Face__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Face To Face</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>