force-app/main/default/objects/Offsite_Template__c/fields/Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>Fund_Name__c</fullName>
    <label>Fund Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>