force-app/main/default/objects/Offsite_Template__c/fields/FYE_Date__c.field-meta.xml
<CustomField>
    <fullName>FYE_Date__c</fullName>
    <label>FYE Date</label>
    <type>Date</type>
</CustomField>