force-app/main/default/objects/Offsite_Template__c/fields/Number_of_Deals_Potential_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deals_Potential_Revenue__c</fullName>
    <label>Number of Deals/Potential Revenue</label>
    <type>TextArea</type>
</CustomField>