force-app/main/default/objects/Offsite_Template__c/fields/Other_Proposals__c.field-meta.xml
<CustomField>
    <fullName>Other_Proposals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other Proposals</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>