force-app/main/default/objects/Offsite_Template__c/fields/Relationship_Metrics_Comment__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Metrics_Comment__c</fullName>
    <label>Relationship Metrics Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>