force-app/main/default/objects/Offsite_Template__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor</label>
    <referenceTo>CapIQ_Company__c</referenceTo>
    <relationshipLabel>Offsite Templates</relationshipLabel>
    <relationshipName>Offsite_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>