force-app/main/default/objects/Offsite_Template__c/fields/Sponsor_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Company_Id__c</fullName>
    <formula>CASESAFEID( Sponsor__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor Company Id</label>
    <type>Text</type>
</CustomField>