force-app/main/default/objects/Offsite_Template__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Time Spent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>