force-app/main/default/objects/Offsite_Template__c/recordTypes/Archive.recordType-meta.xml
<RecordType>
    <fullName>Archive</fullName>
    <active>true</active>
    <description>READ ONLY</description>
    <label>Archive</label>
</RecordType>