force-app/main/default/objects/Offsite_Template__c/recordTypes/Live.recordType-meta.xml
<RecordType>
    <fullName>Live</fullName>
    <active>true</active>
    <description>EDITABLE</description>
    <label>Live</label>
</RecordType>